Add possiblidade de mais um user

--- a/.env.development
+++ b/.env.development
@@ -5,4 +5,4 @@ REACT_APP_TV_TOKUSATSU=tv-tokusatsu.json
 REACT_APP_BOOKS=books.json
 REACT_APP_COMICS=comics.json
 REACT_APP_MANGAS=mangas.json
-REACT_APP_USERNAME=mp
+REACT_APP_USERNAME=mp,lis
