Add new component to midia leitura

--- a/.env.development
+++ b/.env.development
@@ -3,6 +3,6 @@ REACT_APP_TV_SHOWS=tv-shows.json
 REACT_APP_ANIMES=animes.json
 REACT_APP_TV_TOKUSATSU=tv-tokusatsu.json
 REACT_APP_BOOKS=books.json
-REACT_APP_COMICS=comics.json
+REACT_APP_COMICS=comicsv2.json
 REACT_APP_MANGAS=mangas.json
 REACT_APP_USERNAME=mp,lis
